updated articles and fixed interactivity

--- a/static/html/sections/article_1.html
+++ b/static/html/sections/article_1.html
@@ -23,72 +23,167 @@
 
     <div class = "row">
         <div class = "col-md-2"></div>
-        <div class = "col-md-8">
+        <div class = "col-md-8 images">
             <p>
                 A friend once told me that diversity is inviting everyone to your party, and
                 inclusivity is getting them to want to come and dance.  Of course, not everyone you
                 invite will come, and not all of them that come will have a fun time. So if diversity
-                is everyone you invite, and inclusivity is everyone who comes
+                is everyone you invite, and inclusivity is everyone who comes:
             </p>
-        </div>
-        <div class = "col-md-2"></div>
-    </div>
-
-    <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/1440x900" />
-
-
-    <div class = "row">
-        <div class = "col-md-2"></div>
-        <div class="col-md-8 subtitle">
-            <h3>Definition of Inclusivity and Diversity</h3>
-        </div>
-        <div class = "col-md-2"></div>
-        <div class = "col-md-3"></div>
-        <div class = "col-md-3">The inclusivity team defined inclusivity as “communication, compromising, understanding, and willingness to include.” </div>
-        <div class = "col-md-3">The diversity team emphasized diversity in people’s skills. They expect their brothers to be experts in diverse areas of design.</div>
-        <div class = "col-md-3"></div>
-    </div>
-    <div class = "row">
-        <div class = "col-md-2"></div>
-        <div class = "col-md-8">
+            <img src="{% static 'imgs\dni\seperate.jpg' %}" class="img-fluid"/>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Inclusivity is always a subset of diversity, because it’s the feeling of being included,
+                which is more than just an act. You have to invite the people to your party in the first
+                place before they can come (or choose not to come):
             </p>
+            <img src="{% static 'imgs\dni\together.jpg' %}" class="img-fluid"/>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                In a perfect world, you’d invite everyone, they’d all come, and they’d all have a great
+                time—diversity and inclusivity would be one and the same:
             </p>
+            <img src="{% static 'imgs\dni\asone.jpg' %}" class="img-fluid"/>
         </div>
         <div class = "col-md-2"></div>
     </div>
 
-    <div class = "row">
-        <div class = "col-md-1"></div>
-        <div class = "col-md-10">
-            <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/" />
-        </div>
-        <div class = "col-md-1"></div>
-    </div>
+    <!-- <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/1440x900" /> -->
 
+
+    <div class = "row">
+        <div class = "col-md-2"></div>
+        <div class="col-md-8">
+            <p>
+                But who’s ever had that happen to them? Either your guests already had an event going on that
+                night, or something came up last minute, or they’re out of town. There’s no way that everyone’s
+                invited, and everyone shows up.
+            </p>
+            <ol>
+                <li>So inclusivity is a part of diversity</li>
+                <li>Ideally, we’d want to be equally diverse and inclusive</li>
+                <li>But we’re never gonna get them to be identical</li>
+            </ol>
+        </div>
+        <div class = "col-md-2"></div>
+
+    </div>
     <div class = "row">
         <div class = "col-md-2"></div>
         <div class = "col-md-8">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                So, imagine you’re planning a party for all the undergrads at Cornell (sorry professors,
+                administrators, Martha Pollack—we’re already limiting the invite list). Every student, every college,
+                every major. Invited to one party. On one day. Something even more popular than Slope Day.
             </p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                First, you’ll want to set a date. What about next Thursday? Well, that just so happens to be the night of
+                the Orgo Prelim. Archies have studio the next day, people have their essays due.
+            </p>
+            <p>
+                Friday it is then. This way: no homework, no prelims, no class. But some students work the next morning. Some
+                are leaving for a weekend trip. And a lot of students probably just want to sleep.
+            </p>
+            <p>
+                No matter what day and time you choose, some people won’t be able to make it. Already, the ideal
+                diversity-inclusivity fantasy is over.
+            </p>
+        </div>
+        <div class = "col-md-2"></div>
+    </div>
+
+    <div class = "row">
+        <div class = "col-md-2"></div>
+        <div class = "col-md-8">
+            <p>
+                Now that you have the day and time, though, you need to decide what you’ll actually do at the party. Will you show
+                a movie (How could you decide on one?)? Will you play pong? A drinking game? What will you be having to drink?
+            </p>
+            <p>
+                Alcohol? A lot of students don’t drink.
+                <br />
+                Water? It’s Friday—a lot more students want to be drinking.
+                <br />
+                Soda? Too sugary. Juice? Too kid-like. Kale-infused green health smoothie? No thanks. All of the above? In the right
+                quantities? Good luck.
+            </p>
+
+            <p>
+                Say you’ll be serving water—everyone can drink water (and it’s free!). You just lost the sorority sisters who were banking
+                on rosé, and the frat bros who don’t want to be playing pong with water.
+                <br />
+                Or you cave and buy the alc. Hard liquor. Well, the sorority sisters still don’t see their rosé, and a lot of other students
+                won’t be comfortable.
+            </p>
+
+            <p>
+                Your ability to be inclusive is shrinking with every decision you make.
+                <br />
+                And now comes the invite. How do you appeal to everyone?
+            </p>
+        </div>
+        <div class = "col-md-2"></div>
+    </div>
+
+    <div class = "row">
+        <div class = "col-md-2"></div>
+        <div class = "col-md-8 images">
+            <p>
+                No matter how you market it, someone’s not going to like it. They’re gonna see it,
+                roll their eyes, and throw it away like they do with most quarter cards.
+            </p>
+            <p>
+                Or maybe it’s a poster that they’ll never look at.
+                <br />
+                Or a Facebook event that they’ll never check.
+                <br />
+                Or a finely worded, master-crafted email announcement delivered instantly to their inbox
+                that is just as quickly deleted.
+                <br />
+                Before you know it, the people that actually want to come to your party is shrinking yet again.
+            </p>
+
+            <p>
+                But let’s spare you. Let’s say that the day of the party finally arrives. Let’s say that of all the
+                people that marked “Going,” they all show up. No one cancels at the last minute.
+                <br />
+                That still doesn’t mean that everyone who shows up will want to dance. Or that they’ll feel
+                comfortable being there at all.
+            </p>
+
+            <p>
+                What if someone comes, only to find out the person that they can’t stand is there?
+                <br />
+                What if someone comes, and they don’t know anyone?
+                <br />
+                What if someone comes, and they wish that they hadn’t?
+                <br />
+                You’re left with something that looks like this:
+            </p>
+            <img src="{% static 'imgs\dni\party.jpg' %}" class="img-fluid"/>
+        </div>
+        <div class = "col-md-2"></div>
+    </div>
+
+    <div class = "row">
+        <div class = "col-md-2"></div>
+        <div class = "col-md-8">
+            <p>
+                And let’s step away from the party analogy for a moment. What if these individual students instead become
+                various identity groups. How do you plan something that you not only invite them to, but something that
+                actually makes them feel welcome? What sort of activities? How to market them? What format? What venue?
+                What about the groups that don’t normally interact, or the groups that don’t get along? Can you ever get
+                both of them to come and both of them to feel welcome?
+
+                <br />
+
+                The answer to all of these questions is that it’s extremely difficult.
+            </p>
+            <p>
+                What looks good on paper—big ideas like diversity and inclusivity—are hard to make into realities. It’s
+                hard to have both, and it’s almost impossible to be both maximally diverse and maximally inclusive—they’ll
+                probably never be equal.
+            </p>
+            <p>
+                Guess party planning isn’t so easy after all.
             </p>
         </div>
         <div class = "col-md-2"></div>
@@ -97,16 +192,14 @@
     <div class = "row author">
         <div class = "col-md-1"></div>
         <div class = "col-md-5">
-            <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/445x500" />
+            <img src="{% static 'imgs\dni\colton.jpg' %}" class="img-fluid"/>
         </div>
-        <!-- <div class = "col-md-1"></div> -->
         <div class = "col-md-5">
-            <h2>Mollie Zhang</h2>
-            <h4>Computer Science</h4>
+            <h2>Colton Poore</h2>
             <p>
-                It started with a conversation among the thought curators on the Editorial team. After Colton’s proposal of the “donut” diagram,
-                we discovered that whenever we try to improve diversity of a design, its inclusivity will be the cost and decrease proportionally.
-                And the following question thus came to us: will we be able to discuss enhancing diversity AND inclusion simultaneously in our writing?
+                Colton Poore is a senior studying Biology and English in Arts and Sciences. He is a member of Medium’s Editorial meta-team.
+                In addition to Medium, he is a columnist for the Cornell Daily Sun, the Branding Director for the Cornell Environmental
+                Collaborative, and a Student Advisor for the Office of Undergraduate Biology.
             </p>
         </div>
         <div class = "col-md-1"></div>
@@ -116,7 +209,7 @@
             <label><p>
                 Write your thoughts here.
                 </p></label>
-            <input id="thoughts" type="text" placeholder = "press enter to clear" autofocus/>
+            <input id="thoughts" type="text" placeholder = "press enter to clear"/>
             <div class = "fallarea"></div>
     </div>
 </div>
