--- a/static/html/sections/article_3.html
+++ b/static/html/sections/article_3.html
@@ -13,7 +13,7 @@
             <div class = "col-md-1"></div>
             <div class = "col-md-10">
                 <h1>Cocktail Lounge</h1>
-                <h2>by Jennifer Lee</h2>
+                <h3>by Jennifer Lee</h3>
             </div>
             <div class = "col-md-1"></div>
         </div>
@@ -97,13 +97,13 @@
     <div class = "row">
         <div class = "col-md"></div>
         <div class = "col-md-3">
-            <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/445x500" />
+            <img src="{% static 'imgs\dni\interview1.png' %}" class="img-fluid"/>
         </div>
         <div class = "col-md-3">
-            <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/445x500" />
+            <img src="{% static 'imgs\dni\interview2.png' %}" class="img-fluid"/>
         </div>
         <div class = "col-md-3">
-            <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/445x500" />
+            <img src="{% static 'imgs\dni\interview3.png' %}" class="img-fluid"/>
         </div>
         <div class = "col-md"></div>
     </div>
@@ -234,7 +234,6 @@
         <!-- <div class = "col-md-1"></div> -->
         <div class = "col-md-5">
             <h2>Jennifer Lee</h2>
-            <h2>Computer Sciecne</h2>
             <p>
                 It started with a conversation among the thought curators on the Editorial team. After Colton’s proposal of the “donut” diagram,
                 we discovered that whenever we try to improve diversity of a design, its inclusivity will be the cost and decrease proportionally.
@@ -248,7 +247,7 @@
             <label><p>
                 Write your thoughts here.
                 </p></label>
-            <input id="thoughts" type="text" placeholder = "press enter to clear" autofocus/>
+            <input id="thoughts" type="text" placeholder = "press enter to clear" />
             <div class = "fallarea"></div>
     </div>
 </div>
