--- a/static/html/sections/d&i.html
+++ b/static/html/sections/d&i.html
@@ -17,13 +17,16 @@
         <div class="arrow"></div>
       </div>
   </div>
-  <div class="narrative__definition " id = "opening">
+  <div class="narrative__definition " id = "opening" style = "background-image: url('{% static 'imgs\dni\cover.png' %}');">
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-10 narrative__definition__text fade_in">
         "
+        Lines represent differences,
         <br />
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        and when we draw lines,
+        <br />
+        we are calling to attention exclusion."
       </div>
       <div class="col-md-1"></div>
     </div>
@@ -50,7 +53,7 @@
       <div class = "row">
           <div class="col-md"></div>
           <div class = "col-md-3 article border" id = "article_1">
-              <img src = "https://source.unsplash.com/random/340x500" class = "img-fluid"/>
+              <img src="{% static 'imgs\dni\coltonCover.jpg' %}" class="img-fluid"/>
               "A friend once told me that diversity is inviting everyone to your party, and inclusivity is getting them to want to come
               and dance."
               <br />
