--- a/static/html/sections/article_2.html
+++ b/static/html/sections/article_2.html
@@ -12,7 +12,7 @@
         <div class = "row">
             <div class = "col-md-1"></div>
             <div class = "col-md-10">
-                <h1>Diversity and Inclusion 1, or Diversity VS Inclusion?</h1>
+                <h1>Diversity and Inclusion, or Diversity VS Inclusion?</h1>
                 <h2>by Mollie Zhang</h2>
             </div>
             <div class = "col-md-1"></div>
@@ -24,9 +24,10 @@
         <div class = "col-md-1"></div>
         <div class = "col-md-10">
             <p>
-                It started with a conversation among the thought curators on the Editorial team. After Colton’s proposal of the “donut” diagram, we
-                discovered that whenever we try to improve diversity of a design, its inclusivity will be the cost and decrease proportionally. And
-                the following question thus came to us: will we be able to discuss enhancing diversity AND inclusion simultaneously in our writing?
+                It started with a conversation among the thought curators on the Editorial team. After <a href = "/article/1">Colton’s proposal</a>
+                of the “donut” diagram, we discovered that whenever we try to improve diversity of a design, its inclusivity will be the cost and
+                decrease proportionally. And the following question thus came to us: will we be able to discuss enhancing diversity AND inclusion
+                simultaneously in our writing?
             </p>
             <p>
                 To answer this question, the thought curation team designed an experiment. The editorial team is split into two separate groups to
@@ -122,21 +123,44 @@
         </div>
         <div class = "col-md-2"></div>
     </div>
+    <div class = "row">
+        <div class = "col-md-2"></div>
+        <div class="col-md-8 subtitle">
+            <h3>Interview Process </h3>
+        </div>
+        <div class = "col-md-2"></div>
+
+        <div class = "col-md-2"></div>
+        <div class = "col-md-8 images">
+            <p>
+                Moving on to the next stage, both teams chose to interview the applicants that passed the first round of application.
+                In this setting, both teams are designing it in an ideal situation where time consumption of training interviewers and
+                conducting interviews are ignored.
+            </p>
+            <p>
+                This is the most interesting stage: the purpose of the two designs diverges and serves to either achieve diversity of
+                final interviewees or elicit the inclusive character of the interviewees.
+            </p>
+        </div>
+        <div class = "col-md-2"></div>
+    </div>
 
     <div class = "row">
         <div class = "col-md-2"></div>
+        <div class="col-md-8 subtitle">
+            <h3>Conclusion </h3>
+        </div>
+        <div class = "col-md-2"></div>
+
+        <div class = "col-md-2"></div>
         <div class = "col-md-8">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                The two teams’ recruitment process follows the traditional route: application, interview, and final-round cut.
+                However, their emphasis of candidates’ desired qualities are different. The diverse team ensures a new pledge
+                class of people with distinct design skills, while the inclusive team implemented three rounds of interviews to
+                evaluate the applicant’s communication skills and inclusive mindset. Aiming to achieve both diversity and inclusivity,
+                we hope that this experiment elicits the end goal of these two ideals, and hope to combine the two processes to build a
+                diverse and inclusive recruitment process.
             </p>
         </div>
         <div class = "col-md-2"></div>
@@ -145,15 +169,14 @@
     <div class = "row author">
         <div class = "col-md-1"></div>
         <div class = "col-md-5">
-            <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/445x500" />
+            <img src="{% static 'imgs\dni\mollie.jpg' %}" class="img-fluid"/>
         </div>
         <!-- <div class = "col-md-1"></div> -->
         <div class = "col-md-5">
             <h2>Mollie Zhang</h2>
             <p>
-                It started with a conversation among the thought curators on the Editorial team. After Colton’s proposal of the “donut” diagram,
-                we discovered that whenever we try to improve diversity of a design, its inclusivity will be the cost and decrease proportionally.
-                And the following question thus came to us: will we be able to discuss enhancing diversity AND inclusion simultaneously in our writing?
+                Mollie is a sophomore studying Linguistics and CS in the College of Arts and Sciences. She is the team lead of Medium Editorial
+                meta-team. She loves cheesecakes.
             </p>
         </div>
         <div class = "col-md-1"></div>
