--- a/static/html/sections/article_3.html
+++ b/static/html/sections/article_3.html
@@ -229,15 +229,14 @@
     <div class = "row author">
         <div class = "col-md-1"></div>
         <div class = "col-md-5">
-            <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/445x500" />
+            <img src="{% static 'imgs\dni\jenn.jpg' %}" class="img-fluid"/>
         </div>
         <!-- <div class = "col-md-1"></div> -->
         <div class = "col-md-5">
             <h2>Jennifer Lee</h2>
             <p>
-                It started with a conversation among the thought curators on the Editorial team. After Colton’s proposal of the “donut” diagram,
-                we discovered that whenever we try to improve diversity of a design, its inclusivity will be the cost and decrease proportionally.
-                And the following question thus came to us: will we be able to discuss enhancing diversity AND inclusion simultaneously in our writing?
+                Jennifer is from Wayne, PA (about 40 min from Philadelphia). She plays an excessive amount of Tetris and her current high-score
+                for 40L sprint is 37.02 seconds. Jen hates olives, bananas, and brussel sprouts. Jen loves PureLeaf Peach Tea and whipped cream.
             </p>
         </div>
         <div class = "col-md-1"></div>
