--- a/static/html/sections/d&i.html
+++ b/static/html/sections/d&i.html
@@ -67,7 +67,7 @@
           </div>
           <div class = "col-md-3 article border" id = "article_2">
               <img src = "https://source.unsplash.com/random/340x500" class = "img-fluid"/>
-              "most striking quote from the article written here"
+              "Will we be able to discuss enhancing diversity AND inclusion simultaneously in our writing?"
               <br />
               <div class = "detail">
                   <h4><b>Diversity and Inclusion, or Diversity VS Inclusion?</b></h4>
@@ -79,7 +79,7 @@
           </div>
           <div class = "col-md-3 article border" id = "article_3">
               <img src="{% static 'imgs\dni\cocktailpast1.jpg' %}" class="img-fluid"/>
-              "The Cocktail Lounge’s minimalist, chic, new-decade style is equivalent to that of a sheltered college freshman going to
+              "The Cocktail Lounge’s ... style is equivalent to that of a sheltered college freshman going to
               20 O-week parties with their O-Week friends that they’re never going to talk to again."
               <br />
               <div class = "detail">
