--- a/static/html/sections/d&i.html
+++ b/static/html/sections/d&i.html
@@ -66,7 +66,7 @@
               </div>
           </div>
           <div class = "col-md-3 article border" id = "article_2">
-              <img src = "https://source.unsplash.com/random/340x500" class = "img-fluid"/>
+              <img src = "{% static 'imgs\dni\cover.png' %}" class = "img-fluid"/>
               "Will we be able to discuss enhancing diversity AND inclusion simultaneously in our writing?"
               <br />
               <div class = "detail">
