--- a/static/html/sections/about.html
+++ b/static/html/sections/about.html
@@ -148,19 +148,21 @@
             </div>
         </div> -->
 
-        <div class = "join-us">
+        <div class = "join-us" id = "joinus">
             <div class = "join-us__img join-us__left" style = "background-image: url('{% static 'imgs/joinus.jpg' %}');"></div>
             <div class = "join-us__text-wrap right">
                     <div class = "join-us__text">
                         <h2>join us</h2>
-                        <br />
-                        <br />
                         <h5>
-                        Contact
-                        <br  />
                         Email: mediumdesigncollective@gmail.com
                         <br />
                         Facebook: <a href="https://www.facebook.com/mediumdesigncollective/">Medium Design Collective</a>
+                        </h5>
+
+                        <h5>
+                            We are currently accepting positions for our <a href="https://forms.gle/BoGdos7TmV1CwyZx5">Web Team</a>,
+                            <a href="https://forms.gle/V7ohQovAof6PgiN1A">Culture Incubate Team</a>, and
+                            <a href="https://forms.gle/rcrxLurNvuhajdjv6">Society Incubate Team</a>!
                         </h5>
                     </div>
                 </div>
