--- a/static/html/sections/index.html
+++ b/static/html/sections/index.html
@@ -13,6 +13,7 @@
     <div class="fullscreen-background__overlay"></div>
     <div class="fullscreen-background__text">
         <h1 class="unselectable">medium design collective</h1>
+        <h2><a href="/about/#joinus"> apply here!</a></h2>
     </div>
 </div>
 <!-- <div class="narrative">
