added deadline to application

--- a/static/html/sections/about.html
+++ b/static/html/sections/about.html
@@ -162,7 +162,7 @@
                         <h5>
                             We are currently accepting positions for our <a href="https://forms.gle/BoGdos7TmV1CwyZx5">Web Team</a>,
                             <a href="https://forms.gle/V7ohQovAof6PgiN1A">Culture Incubate Team</a>, and
-                            <a href="https://forms.gle/rcrxLurNvuhajdjv6">Society Incubate Team</a>!
+                            <a href="https://forms.gle/rcrxLurNvuhajdjv6">Society Incubate Team</a> apply by 11:59PM Friday, Jan 24th!
                         </h5>
                     </div>
                 </div>
